// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XmlStream complex example including self-closing elements 1`] = `
"<item>
          <key>value one</key>
          <empty></empty>
          <self_closing/>
      </item><item>
          <key>value two</key>
          <empty></empty>
          <self_closing/>
      </item><item foo="bar">
        <key>
          value two
        </key>
        <text>
        </text>
        <!--  Some comment  -->
        <empty fizz="1"  buzz="2"></empty>
        <![CDATA[<sender>John Smith</sender>]]>
        <self_closing tar="mar"/>
    </item><item>
      <key>
        value two
      </key>
    </item><item></item><item foo="bar"/><item/>"
`;

exports[`XmlStream elements unrelated to selector path must not be present 1`] = `
"<item>
      <key>value one</key>
      <empty></empty>
      <self_closing/>
  </item><item>
      <key>value two</key>
      <empty></empty>
      <self_closing/>
  </item>"
`;
